--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waseem's Candy Mafia</title>
+    <title>BZ247 Mega Gaming Hub</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Bebas+Neue&display=swap');
-        body { margin: 0; background: #0a0a0a; color: white; font-family: 'Fredoka One', cursive; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; }
-        .game-card { background: rgba(255,255,255,0.1); border-radius: 25px; width: 300px; padding: 20px; text-align: center; border: 2px solid #ff0055; transition: 0.3s; text-decoration: none; color: white; }
-        .game-card:hover { transform: scale(1.05); box-shadow: 0 0 30px #ff0055; }
-        .card-img { font-size: 80px; margin-bottom: 20px; }
-        .play-btn { background: #ff0055; color: white; padding: 15px 30px; border-radius: 15px; display: inline-block; font-weight: bold; margin-top: 20px; font-size: 20px; }
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
+        :root { --pink: #ff0055; --neon: #00ff88; --bg: #050008; }
+        body { margin: 0; padding: 0; background: var(--bg); color: white; font-family: 'Montserrat', sans-serif; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
+        header { text-align: center; padding: 40px 20px; }
+        header h1 { font-size: 32px; color: var(--pink); text-transform: uppercase; margin: 0; text-shadow: 0 0 20px var(--pink); }
+        .hub-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; width: 90%; max-width: 800px; padding-bottom: 50px; }
+        .game-card { background: #000; border: 3px solid var(--pink); border-radius: 30px; padding: 30px; text-align: center; box-shadow: 0 0 30px rgba(255, 0, 85, 0.2); }
+        .tetris-card { border-color: var(--neon); box-shadow: 0 0 30px rgba(0, 255, 136, 0.2); }
+        .icon { font-size: 60px; margin-bottom: 15px; display: block; }
+        .play-btn { display: inline-block; text-decoration: none; padding: 15px 35px; border-radius: 40px; font-weight: 900; font-size: 16px; text-transform: uppercase; }
+        .candy-btn { background: var(--pink); color: white; box-shadow: 0 0 20px var(--pink); }
+        .tetris-btn { background: var(--neon); color: black; box-shadow: 0 0 20px var(--neon); }
     </style>
 </head>
 <body>
-    <header style="margin-bottom: 40px; text-align: center;">
-        <h1 style="font-family: 'Bebas Neue'; font-size: 50px; color: #ff0055; margin: 0;">CANDY MAFIA 3D</h1>
+    <header>
+        <h1>BZ247 GAMING HUB</h1>
         <p>Created by Waseem Asghar</p>
     </header>
-
-    <a href="candy.html" class="game-card">
-        <div class="card-img">🍭</div>
-        <h2>PLAY NOW</h2>
-        <p>Experience the Cinematic Action!</p>
-        <div class="play-btn">START GAME ▶</div>
-    </a>
+    <div class="hub-grid">
+        <div class="game-card">
+            <span class="icon">🍭</span>
+            <h2>CANDY MAFIA 3D</h2>
+            <p style="color:#888; font-size:11px; margin-bottom:20px;">Experience the Cinematic Action!</p>
+            <a href="candy.html" class="play-btn candy-btn">START GAME ▶</a>
+        </div>
+        <div class="game-card tetris-card">
+            <span class="icon">🧱</span>
+            <h2 style="color: var(--neon);">CYBER GRID</h2>
+            <p style="color:#888; font-size:11px; margin-bottom:20px;">Modern Neon Blocks Strategy</p>
+            <a href="tetris.html" class="play-btn tetris-btn">DEPLOY NOW ▶</a>
+        </div>
+    </div>
 </body>
 </html>
