--- a/index.html
+++ b/index.html
@@ -2,41 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BZ247 Mega Gaming Hub</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>BZ247 Studios | Gaming Hub</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
-        :root { --pink: #ff0055; --neon: #00ff88; --bg: #050008; }
-        body { margin: 0; padding: 0; background: var(--bg); color: white; font-family: 'Montserrat', sans-serif; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
-        header { text-align: center; padding: 40px 20px; }
-        header h1 { font-size: 32px; color: var(--pink); text-transform: uppercase; margin: 0; text-shadow: 0 0 20px var(--pink); }
-        .hub-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; width: 90%; max-width: 800px; padding-bottom: 50px; }
-        .game-card { background: #000; border: 3px solid var(--pink); border-radius: 30px; padding: 30px; text-align: center; box-shadow: 0 0 30px rgba(255, 0, 85, 0.2); }
-        .tetris-card { border-color: var(--neon); box-shadow: 0 0 30px rgba(0, 255, 136, 0.2); }
-        .icon { font-size: 60px; margin-bottom: 15px; display: block; }
-        .play-btn { display: inline-block; text-decoration: none; padding: 15px 35px; border-radius: 40px; font-weight: 900; font-size: 16px; text-transform: uppercase; }
-        .candy-btn { background: var(--pink); color: white; box-shadow: 0 0 20px var(--pink); }
-        .tetris-btn { background: var(--neon); color: black; box-shadow: 0 0 20px var(--neon); }
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@900&display=swap');
+        :root { --pink: #ff0055; --neon: #00ff88; --bg: #050008; --gold: #ffd700; }
+        * { user-select: none; -webkit-user-select: none; -webkit-touch-callout: none; touch-action: none; -webkit-tap-highlight-color: transparent; }
+        body { margin: 0; background: var(--bg); color: white; font-family: 'Montserrat', sans-serif; display: flex; flex-direction: column; align-items: center; min-height: 100vh; overflow-x: hidden; }
+        
+        /* HEADER & LOGO */
+        .header { text-align: center; padding: 40px 20px 20px; }
+        .logo { font-family: 'Orbitron'; font-size: 40px; color: #fff; text-shadow: 0 0 15px var(--pink); margin: 0; }
+        .studio { font-size: 10px; color: var(--neon); letter-spacing: 8px; display: block; }
+
+        /* PROFILE HUD */
+        .profile-card { background: rgba(255,255,255,0.05); border: 2px solid var(--neon); border-radius: 20px; padding: 15px; width: 90%; max-width: 500px; display: flex; align-items: center; gap: 15px; margin: 10px 0; }
+        .rank-badge { font-size: 8px; background: var(--neon); color: #000; padding: 2px 6px; border-radius: 4px; font-weight: 900; }
+
+        /* GAME GRID */
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; width: 95%; max-width: 800px; padding-bottom: 50px; }
+        .card { background: rgba(0,0,0,0.8); border: 2px solid var(--pink); border-radius: 25px; padding: 30px 10px; text-align: center; text-decoration: none; color: white; transition: 0.3s; }
+        .tetris-card { border-color: var(--neon); }
+        .card:active { transform: scale(0.95); }
+        .deploy-btn { display: inline-block; margin-top: 15px; padding: 12px 30px; border-radius: 40px; font-weight: 900; background: var(--pink); box-shadow: 0 0 15px var(--pink); font-size: 12px; }
+        .tetris-btn { background: var(--neon); color: #000; box-shadow: 0 0 15px var(--neon); }
     </style>
 </head>
 <body>
-    <header>
-        <h1>BZ247 GAMING HUB</h1>
-        <p>Created by Waseem Asghar</p>
-    </header>
-    <div class="hub-grid">
-        <div class="game-card">
-            <span class="icon">🍭</span>
-            <h2>CANDY MAFIA 3D</h2>
-            <p style="color:#888; font-size:11px; margin-bottom:20px;">Experience the Cinematic Action!</p>
-            <a href="candy.html" class="play-btn candy-btn">START GAME ▶</a>
+    <div class="header">
+        <h1 class="logo">BZ247</h1>
+        <span class="studio">STUDIOS</span>
+    </div>
+
+    <div class="profile-card">
+        <div style="font-size: 30px; border: 2px solid var(--neon); border-radius: 50%; padding: 10px;">👨‍✈️</div>
+        <div>
+            <p style="margin:0; font-family:'Orbitron'; font-size:14px;">PILOT WASEEM</p>
+            <span class="rank-badge">CADET LVL 1</span>
         </div>
-        <div class="game-card tetris-card">
-            <span class="icon">🧱</span>
+    </div>
+
+    <div class="grid">
+        <a href="candy.html" class="card">
+            <span style="font-size: 50px;">🍭</span>
+            <h2>CANDY MAFIA</h2>
+            <div class="deploy-btn">DEPLOY ▶</div>
+        </a>
+        <a href="tetris.html" class="card tetris-card">
+            <span style="font-size: 50px;">🧱</span>
             <h2 style="color: var(--neon);">CYBER GRID</h2>
-            <p style="color:#888; font-size:11px; margin-bottom:20px;">Modern Neon Blocks Strategy</p>
-            <a href="tetris.html" class="play-btn tetris-btn">DEPLOY NOW ▶</a>
-        </div>
+            <div class="deploy-btn tetris-btn">DEPLOY ▶</div>
+        </a>
     </div>
 </body>
 </html>
